--- a/index.html
+++ b/index.html
@@ -509,6 +509,9 @@
             </div>
             
 
+            <p class="copy-right-grids text-li text-center my-sm-4 my-4">
+                Thankyou for visiting our school website
+            </p>
             
         </div>
         <!-- //footer bottom -->
